--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="index.html" class="header__logo-link">
@@ -226,78 +226,77 @@
     <!-- faq -->
     <div class="page-faq layout-page-faq">
       <div class="page-faq__inner inner fish-image">
-				<div class="page-faq__accordion accordion-list js-accordion">
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+				<div class="page-faq__accordion accordion js-accordion-list">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-            <div class="accordion-list__item js-accordion__item accordion">
-              <h3 class="accordion__title js-accordion__title">
+            <div class="accordion__item js-accordion-item">
+              <h3 class="accordion__title js-accordion-title">
                 ここに質問が入ります。
               </h3>
-              <div class="accordion__content js-accordion__content">
+              <div class="accordion__content">
                 <p class="accordion__text">
                   ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                 </p>
               </div>
             </div>
-
         </div>
       </div>
     </div>
@@ -354,7 +353,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-c.html" class="footer-link__main">
+                <a href="page-campaign.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -378,9 +377,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=license-lecture" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=intro-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=fun-diving" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
@@ -401,13 +400,15 @@
               </div>
               <div class="footer__link footer-link">
                 <a href="page-price.html" class="footer-link__main">
-                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <div class="footer-link__icon">
+                    <img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン">
+                  </div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-price.html#license-course" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-price.html#trial-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-price.html#diving-fun" class="footer-link__detail">ファンダイビング</a>                  
                 </div>
               </div>
             </div>
