--- a/src/page-information.html
+++ b/src/page-information.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="index.html" class="header__logo-link">
@@ -227,16 +227,17 @@
       <div class="page-information__inner inner fish-image">
         <div class="page-information__tab tab">
           <div class="tab__list">
-            <button class="tab__button tab__example-mask--white js-tab-button is-active" id="ライセンス講習">
+            <button class="tab__button tab__example-mask--white js-tab-button is-active" id="license-lecture">
               <span class="u-desktop"></span>ライセンス<br class="u-mobile">講習
             </button>
-            <button class="tab__button tab__example-mask--green js-tab-button" id="ファンダイビング">
+            <button class="tab__button tab__example-mask--green js-tab-button" id="fun-diving">
               <span class="u-desktop"></span>ファン<br class="u-mobile">ダイビング
             </button>
-            <button class="tab__button tab__example-mask--green2 js-tab-button" id="体験ダイビング">
+            <button class="tab__button tab__example-mask--green2 js-tab-button" id="intro-diving">
               <span class="u-desktop"></span>体験<br class="u-mobile">ダイビング
             </button>
           </div>
+          
           <div class="tab__contents">
             <div class="tab__content js-tab-content is-active">
               <div class="tab__item">
@@ -322,7 +323,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-c.html" class="footer-link__main">
+                <a href="page-campaign.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -346,9 +347,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=license-lecture" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=intro-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=fun-diving" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
@@ -369,13 +370,15 @@
               </div>
               <div class="footer__link footer-link">
                 <a href="page-price.html" class="footer-link__main">
-                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <div class="footer-link__icon">
+                    <img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン">
+                  </div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-price.html#license-course" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-price.html#trial-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-price.html#diving-fun" class="footer-link__detail">ファンダイビング</a>                  
                 </div>
               </div>
             </div>
