--- a/src/page-privacy-policy.html
+++ b/src/page-privacy-policy.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="index.html" class="header__logo-link">
@@ -55,7 +55,7 @@
           <div class="drawer-menu__list">
             <div class="drawer-menu__left">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-campaign.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">キャンペーン</p>
                 </a>
@@ -66,13 +66,13 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-about.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">私たちについて</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-information.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ダイビング情報</p>
                 </a>
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-blog.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ブログ</p>
                 </a>
@@ -91,13 +91,13 @@
             </div>
             <div class="drawer-menu__right">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-voice.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-price.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">料金一覧</p>
                 </a>
@@ -108,25 +108,31 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-faq.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-site-map.html" class="drawer-menu-link__main-right">
+                  <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="drawer-menu-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="drawer-menu__link drawer-menu-link">
+                <a href="page-privacy-policy.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-terms-of-service.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">利用規約</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-contact.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お問い合わせ</p>
                 </a>
@@ -139,49 +145,49 @@
       <div class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="page-campaign.html">
               <p class="pc-nav__main">Campaign</p>
               <p class="pc-nav__sub">キャンペーン</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#about">
+            <a href="page-about.html">
               <p class="pc-nav__main">About&nbsp;us</p>
               <p class="pc-nav__sub">私たちについて</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#information">
+            <a href="page-information.html">
               <p class="pc-nav__main">Information</p>
               <p class="pc-nav__sub">ダイビング情報</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#blog">
+            <a href="page-blog.html">
               <p class="pc-nav__main">Blog</p>
               <p class="pc-nav__sub">ブログ</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#voice">
+            <a href="page-voice.html">
               <p class="pc-nav__main">Voice</p>
               <p class="pc-nav__sub">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">
+            <a href="page-price.html">
               <p class="pc-nav__main">Price</p>
               <p class="pc-nav__sub">料金一覧</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#faq">
+            <a href="page-faq.html">
               <p class="pc-nav__main">FAQ</p>
               <p class="pc-nav__sub">よくある質問</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact-top">
+            <a href="page-contact.html">
               <p class="pc-nav__main">Contact</p>
               <p class="pc-nav__sub">お問合せ</p>
             </a>
@@ -223,58 +229,51 @@
     <div class="page-privacypolicy layout-page-privacypolicy">
       <div class="page-privacypolicy__inner inner fish-image">
         <h2 class="page-privacypolicy__title">プライバシーポリシー</h2>
-        <div class="page-privacypolicy__contact">
-          <p class="page-privacypolicy__text">
-            以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。
-          </p>
-          <div class="page-privacypolicy__wrap">
-            <p class="page-privacypolicy__note">
-              1.概要 当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。
-            </p>
-            <p class="page-privacypolicy__note">
-              2.収集する情報 当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。
-            </p>
+          <div class="page-privacypolicy__box">
+            <p>以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。</p>
+            <div>
+              <ol>
+                <li>概要当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。</li>
+                <li>収集する情報 当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。</li>
+              </ol>
+            </div>
+            <div>
+              <p>また、当社のサイトを閲覧する際に、IPアドレス、ブラウザの種類、言語設定、アクセス日時などの情報も収集する場合があります。</p>
+              <ol>
+                <li>情報の使用 当社は、お客様から収集した個人情報を、以下の目的で使用することがあります。</li>
+              </ol>
+            </div>
+            <div>
+              <p>・お客様からのお問い合わせやサポートの提供 ・当社のサービスや製品の提供 ・当社のサイトの改善や新しいサービスの開発
+                ・法律や規制に基づく義務の履行
+              </p>
+              <ol>
+                <li>情報の共有 当社は、お客様から収集した個人情報を、以下の場合に限り第三者に提供することがあります。</li>
+              </ol>
+            </div>
+            <div>
+              <p>・お客様の同意がある場合 ・法律や規制に基づく場合 ・当社が信頼できると判断した業務委託先に必要な範囲で提供する場合</p>
+              <ol>
+                <li>セキュリティ
+                  当社は、お客様の個人情報を適切に保護するために、適切な安全対策を講じます。個人情報への不正アクセス、紛失、改ざん、漏洩等を防止するための措置を講じます。</li>
+                <li>Cookieの使用
+                  当社は、お客様により良いサイトの利用体験を提供するために、Cookieを使用する場合があります。Cookieは、お客様が当社のサイトを訪れた際に、お客様のブラウザに保存される小さなデータファイルです。Cookieには個人情報は含まれません。
+                </li>
+                <li>お問い合わせ先 当社のプライバシーポリシーに関するご質問やご意見は、以下の連絡先までお問い合わせください。 [会社名] [住所]
+                  [電話番号]
+                  [メールアドレス]</li>
+                <li>プライバシーポリシーの変更
+                  当社は、必要に応じて本プライバシーポリシーを変更することがあります。変更後のプライバシーポリシーは、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。
+                </li>
+              </ol>
+            </div>
+            <div>
+              <p>以上が、当社のプライバシーポリシーの概要です。お客様の個人情報保護のために、常に努めてまいります。</p>
+            </div>
           </div>
-          <div class="page-privacypolicy__wrap">
-            <p class="page-privacypolicy__text">
-              また、当社のサイトを閲覧する際に、IPアドレス、ブラウザの種類、言語設定、アクセス日時などの情報も収集する場合があります。
-            </p>
-            <p class="page-privacypolicy__note">
-              1.情報の使用 当社は、お客様から収集した個人情報を、以下の目的で使用することがあります。
-            </p>
-          </div>
-          <div class="page-privacypolicy__wrap">
-            <p class="page-privacypolicy__text">
-              ・お客様からのお問い合わせやサポートの提供 ・当社のサービスや製品の提供 ・当社のサイトの改善や新しいサービスの開発 ・法律や規制に基づく義務の履行
-            </p>
-            <p class="page-privacypolicy__note">
-              1.情報の共有 当社は、お客様から収集した個人情報を、以下の場合に限り第三者に提供することがあります。
-            </p>
-          </div>
-          <div class="page-privacypolicy__wrap">
-            <p class="page-privacypolicy__text">
-              ・お客様の同意がある場合 ・法律や規制に基づく場合 ・当社が信頼できると判断した業務委託先に必要な範囲で提供する場合
-            </p>
-            <p class="page-privacypolicy__note">
-              1.セキュリティ 当社は、お客様の個人情報を適切に保護するために、適切な安全対策を講じます。個人情報への不正アクセス、紛失、改ざん、漏洩等を防止するための措置を講じます。
-            <p class="page-privacypolicy__note">
-              2.Cookieの使用 当社は、お客様により良いサイトの利用体験を提供するために、Cookieを使用する場合があります。Cookieは、お客様が当社のサイトを訪れた際に、お客様のブラウザに保存される小さなデータファイルです。Cookieには個人情報は含まれません。
-            </p>
-            <p class="page-privacypolicy__note">
-              3.お問い合わせ先 当社のプライバシーポリシーに関するご質問やご意見は、以下の連絡先までお問い合わせください。 [会社名] [住所] [電話番号] [メールアドレス]
-            </p>
-            <p class="page-privacypolicy__note">
-              4.プライバシーポリシーの変更 当社は、必要に応じて本プライバシーポリシーを変更することがあります。変更後のプライバシーポリシーは、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。
-            </p>
-          </div>
-          <div class="page-privacypolicy__wrap">
-            <p class="page-privacypolicy__text">
-              以上が、当社のプライバシーポリシーの概要です。お客様の個人情報保護のために、常に努めてまいります。
-            </p>
-          </div>
-        </div>
       </div>
     </div>
+
 
 
 <!-- Contact-top -->
@@ -328,7 +327,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-c.html" class="footer-link__main">
+                <a href="page-campaign.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -352,9 +351,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=license-lecture" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=intro-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=fun-diving" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
@@ -375,13 +374,15 @@
               </div>
               <div class="footer__link footer-link">
                 <a href="page-price.html" class="footer-link__main">
-                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <div class="footer-link__icon">
+                    <img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン">
+                  </div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-price.html#license-course" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-price.html#trial-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-price.html#diving-fun" class="footer-link__detail">ファンダイビング</a>                  
                 </div>
               </div>
             </div>
