--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="index.html" class="header__logo-link">
@@ -55,7 +55,7 @@
           <div class="drawer-menu__list">
             <div class="drawer-menu__left">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="page-c.html" class="drawer-menu-link__main">
+                <a href="page-campaign.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">キャンペーン</p>
                 </a>
@@ -77,9 +77,9 @@
                   <p class="drawer-menu-link__text">ダイビング情報</p>
                 </a>
                 <div class="drawer-menu-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="drawer-menu-link__detail footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="drawer-menu-link__detail footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="drawer-menu-link__detail footer-link__detail">ファンダイビング</a>
+                  <a href="#" class="drawer-menu-link__detail">ライセンス講習</a>
+                  <a href="#" class="drawer-menu-link__detail">体験ダイビング</a>
+                  <a href="#" class="drawer-menu-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
@@ -114,6 +114,12 @@
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
+                <a href="page-site-map.html" class="drawer-menu-link__main-right">
+                  <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="drawer-menu-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="drawer-menu__link drawer-menu-link">
                 <a href="page-privacy-policy.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">プライバシー<br>ポリシー</p>
@@ -139,49 +145,49 @@
       <div class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="page-campaign.html">
               <p class="pc-nav__main">Campaign</p>
               <p class="pc-nav__sub">キャンペーン</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#about">
+            <a href="page-about.html">
               <p class="pc-nav__main">About&nbsp;us</p>
               <p class="pc-nav__sub">私たちについて</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#information">
+            <a href="page-information.html">
               <p class="pc-nav__main">Information</p>
               <p class="pc-nav__sub">ダイビング情報</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#blog">
+            <a href="page-blog.html">
               <p class="pc-nav__main">Blog</p>
               <p class="pc-nav__sub">ブログ</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#voice">
+            <a href="page-voice.html">
               <p class="pc-nav__main">Voice</p>
               <p class="pc-nav__sub">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">
+            <a href="page-price.html">
               <p class="pc-nav__main">Price</p>
               <p class="pc-nav__sub">料金一覧</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#faq">
+            <a href="page-faq.html">
               <p class="pc-nav__main">FAQ</p>
               <p class="pc-nav__sub">よくある質問</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact-top">
+            <a href="page-contact.html">
               <p class="pc-nav__main">Contact</p>
               <p class="pc-nav__sub">お問合せ</p>
             </a>
@@ -251,9 +257,9 @@
                       <p class="page-sitemap-link__text">ダイビング情報</p>
                     </a>
                     <div class="page-sitemap-link__details">
-                      <a href="#" class="page-sitemap-link__detail">ライセンス講習</a>
-                      <a href="#" class="page-sitemap-link__detail">体験ダイビング</a>
-                      <a href="#" class="page-sitemap-link__detail">ファンダイビング</a>
+                      <a href="page-information.html?tab=license-lecture" class="page-sitemap-link__detail">ライセンス講習</a>
+                      <a href="page-information.html?tab=intro-diving" class="page-sitemap-link__detail">体験ダイビング</a>
+                      <a href="page-information.html?tab=fun-diving" class="page-sitemap-link__detail">ファンダイビング</a>
                     </div>
                   </div>
                   <div class="page-sitemap__link page-sitemap-link">
@@ -278,9 +284,9 @@
                       <p class="page-sitemap-link__text">料金一覧</p>
                     </a>
                     <div class="page-sitemap-link__details">
-                      <a href="#" class="page-sitemap-link__detail">ライセンス講習</a>
-                      <a href="#" class="page-sitemap-link__detail">体験ダイビング</a>
-                      <a href="#" class="page-sitemap-link__detail">ファンダイビング</a>
+                      <a href="page-price.html#license-course" class="page-sitemap-link__detail">ライセンス講習</a>
+                      <a href="page-price.html#trial-diving" class="page-sitemap-link__detail">体験ダイビング</a>
+                      <a href="page-price.html#diving-fun" class="page-sitemap-link__detail">ファンダイビング</a>
                     </div>
                   </div>
                 </div>
@@ -369,7 +375,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-c.html" class="footer-link__main">
+                <a href="page-campaign.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -393,9 +399,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=license-lecture" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=intro-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=fun-diving" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
@@ -416,13 +422,15 @@
               </div>
               <div class="footer__link footer-link">
                 <a href="page-price.html" class="footer-link__main">
-                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <div class="footer-link__icon">
+                    <img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン">
+                  </div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-price.html#license-course" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-price.html#trial-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-price.html#diving-fun" class="footer-link__detail">ファンダイビング</a>                  
                 </div>
               </div>
             </div>
