--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="index.html" class="header__logo-link">
@@ -55,7 +55,7 @@
           <div class="drawer-menu__list">
             <div class="drawer-menu__left">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-campaign.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">キャンペーン</p>
                 </a>
@@ -66,13 +66,13 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-about.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">私たちについて</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-information.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ダイビング情報</p>
                 </a>
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-blog.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ブログ</p>
                 </a>
@@ -91,13 +91,13 @@
             </div>
             <div class="drawer-menu__right">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-voice.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-price.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">料金一覧</p>
                 </a>
@@ -108,25 +108,31 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-faq.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-site-map.html" class="drawer-menu-link__main-right">
+                  <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="drawer-menu-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="drawer-menu__link drawer-menu-link">
+                <a href="page-privacy-policy.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-terms-of-service.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">利用規約</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-contact.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お問い合わせ</p>
                 </a>
@@ -139,49 +145,49 @@
       <div class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="page-campaign.html">
               <p class="pc-nav__main">Campaign</p>
               <p class="pc-nav__sub">キャンペーン</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#about">
+            <a href="page-about.html">
               <p class="pc-nav__main">About&nbsp;us</p>
               <p class="pc-nav__sub">私たちについて</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#information">
+            <a href="page-information.html">
               <p class="pc-nav__main">Information</p>
               <p class="pc-nav__sub">ダイビング情報</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#blog">
+            <a href="page-blog.html">
               <p class="pc-nav__main">Blog</p>
               <p class="pc-nav__sub">ブログ</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#voice">
+            <a href="page-voice.html">
               <p class="pc-nav__main">Voice</p>
               <p class="pc-nav__sub">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">
+            <a href="page-price.html">
               <p class="pc-nav__main">Price</p>
               <p class="pc-nav__sub">料金一覧</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#faq">
+            <a href="page-faq.html">
               <p class="pc-nav__main">FAQ</p>
               <p class="pc-nav__sub">よくある質問</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact-top">
+            <a href="page-contact.html">
               <p class="pc-nav__main">Contact</p>
               <p class="pc-nav__sub">お問合せ</p>
             </a>
@@ -223,43 +229,31 @@
     <div class="page-termsofservice layout-page-termsofservice">
       <div class="page-termsofservice__inner inner fish-image">
         <h2 class="page-termsofservice__title">利用規約</h2>
-        <div class="page-termsofservice__contact">
-          <p class="page-termsofservice__text">
-            以下は、Webサイトで使用する一般的な利用規約の例です。
-          </p>
-          <div class="page-termsofservice__wrap">
-            <p class="page-termsofservice__note">
-              1.概要 この利用規約は、当社が提供するサービスの利用に関する条件を定めたものです。本規約に同意いただくことで、当社のサービスを利用いただけます。なお、本規約に違反した場合、当社はサービスの提供を中止することがあります。
+        <div class="page-termsofservice__box">
+          <div>
+            <p>
+              以下は、Webサイトで使用する一般的な利用規約の例です。
             </p>
-            <p class="page-termsofservice__note">
-              2.サービスの利用 当社のサービスは、お客様が自己責任において利用するものとし、当社はその利用に対して責任を負いません。また、当社はいつでも、サービスの提供を中止することができるものとします。
-            </p>
-            <p class="page-termsofservice__note">
-              3.禁止事項 お客様は、以下の行為を禁止します。
-            </p>
+            <ol>
+              <li>概要 この利用規約は、当社が提供するサービスの利用に関する条件を定めたものです。本規約に同意いただくことで、当社のサービスを利用いただけます。なお、本規約に違反した場合、当社はサービスの提供を中止することがあります。</li>
+              <li>サービスの利用 当社のサービスは、お客様が自己責任において利用するものとし、当社はその利用に対して責任を負いません。また、当社はいつでも、サービスの提供を中止することができるものとします。</li>
+              <li>禁止事項 お客様は、以下の行為を禁止します。</li>
+            </ol>
           </div>
-            <p class="page-termsofservice__text">
+          <div>
+            <p>
               ・当社のサービスに対して不正なアクセスをすること ・当社のサービスにおいて、他のユーザーに対して迷惑をかける行為をすること ・当社のサービスを商業目的で利用すること ・当社のサービスに関する知的財産権を侵害する行為をすること ・その他、法律や公序良俗に反する行為をすること
             </p>
-          <div class="page-termsofservice__wrap">
-            <p class="page-termsofservice__note">
-              1.知的財産権 当社のサービスに関する知的財産権は、当社または当社にライセンスを許諾している者に帰属します。お客様は、当社の事前の承諾なしに、当社のサービスに関する知的財産権を使用することはできません。
-            </p>
-            <p class="page-termsofservice__note">
-              2.免責事項 当社は、当社のサービスに関連して発生した損害について、一切の責任を負わないものとします。また、当社は、当社のサービスにより提供される情報の正確性、信頼性、完全性、適時性についても一切保証しません。
-            </p>
-            <p class="page-termsofservice__note">
-              3.プライバシー 当社は、お客様の個人情報を適切に保護するために、個人情報保護方針に従って適切な取扱いを行います。
-            </p>
-            <p class="page-termsofservice__note">
-              4.その他の規定 本規約は、日本法に準拠して解釈されるものとし、当社とお客様は、本規約に関する紛争が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とすることに同意します。
-            </p>
-            <p class="page-termsofservice__note">
-              5.利用規約の変更 当社は、必要に応じて本利用規約を変更することがあります。変更後の利用規約は、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。
-            </p>
+            <ol>
+              <li>知的財産権 当社のサービスに関する知的財産権は、当社または当社にライセンスを許諾している者に帰属します。お客様は、当社の事前の承諾なしに、当社のサービスに関する知的財産権を使用することはできません。</li>
+              <li>免責事項 当社は、当社のサービスに関連して発生した損害について、一切の責任を負わないものとします。また、当社は、当社のサービスにより提供される情報の正確性、信頼性、完全性、適時性についても一切保証しません。</li>
+              <li>プライバシー 当社は、お客様の個人情報を適切に保護するために、個人情報保護方針に従って適切な取扱いを行います。</li>
+              <li>その他の規定 本規約は、日本法に準拠して解釈されるものとし、当社とお客様は、本規約に関する紛争が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とすることに同意します。</li>
+              <li>利用規約の変更 当社は、必要に応じて本利用規約を変更することがあります。変更後の利用規約は、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。</li>
+            </ol>
           </div>
-          <div class="page-termsofservice__wrap">
-            <p class="page-termsofservice__text">
+          <div>
+            <p>
               以上が、当社の利用規約の概要です。お客様のサービス利用にあたっては、本規約をお読みいただき、同意いただける場合のみサービスをご利用ください。
             </p>
           </div>
@@ -319,7 +313,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-c.html" class="footer-link__main">
+                <a href="page-campaign.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -343,9 +337,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
-                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
-                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=license-lecture" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=intro-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=fun-diving" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
@@ -366,13 +360,15 @@
               </div>
               <div class="footer__link footer-link">
                 <a href="page-price.html" class="footer-link__main">
-                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <div class="footer-link__icon">
+                    <img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン">
+                  </div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-price.html#license-course" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-price.html#trial-diving" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-price.html#diving-fun" class="footer-link__detail">ファンダイビング</a>                  
                 </div>
               </div>
             </div>
